<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PrescriptionActivity">

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_image"
        tools:text="@string/patient_name" />

    <ImageView
        android:id="@+id/patient_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#FF0000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/prescription_label"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="#878787"
        android:padding="10dp"
        android:text="@string/prescription"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_name" />

    <LinearLayout
        android:id="@+id/medication_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_add_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prescription_label"
        app:layout_constraintVertical_bias="0.114">
    </LinearLayout>

    <Button
        android:id="@+id/button_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#01074C"
        android:text="@string/add_new_medicine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
